Revision history for PDL::NDBin

{{$NEXT}}

0.010     2013-03-07 11:09:22 Europe/Brussels

 - release on master branch instead of development branch; no changes

0.009     2013-03-07 11:01:19 Europe/Brussels

 - it is now possible to pass additional arguments to action class constructors
   when specifying actions; the only additional argument so far is the type of
   the output piddle, allowing you to write, e.g.,
      my $binner = PDL::NDBin->new(
         axes => ...,
         vars => [ [ var => { class => 'StdDev', type => \&PDL::float } ] ],
      );
   to get the standard deviation in type 'float' instead of the default type
   'double' (Edward Baudrez)
 - try to make the tests run under Perl 5.8 (Edward Baudrez)
 - other minor fixes (Edward Baudrez)

0.008     2013-02-12 17:29:45 Europe/Brussels

 - implemented the advance() method of PDL::NDBin::Iterator in XS. This
   improves the performance of PDL::NDBin for very large bin numbers greatly,
   and also reduces the overhead (for very small datafiles) somewhat. The user
   manual has been updated with the latest results. (Edward Baudrez)
 - fixed a test that started failing with the latest PDL development releases
   (Edward Baudrez)

0.007     2013-02-05 23:42:23 Europe/Brussels

 - simplified and optimized PDL::NDBin::Iterator somewhat, in an attempt to
   address the poor performance with large numbers of bins (Edward Baudrez)
 - added more tests in an attempt to catch a strange test failure that I cannot
   reproduce (Edward Baudrez)

0.006     2013-02-03 22:06:31 Europe/Brussels

 - first public release

0.005     2013-02-03 21:12:45 Europe/Brussels

 - never released on CPAN
 - started using Dist::Zilla for distribution management (Edward Baudrez)
 - added documentation for PDL::NDBin::Iterator and other classes (Edward
   Baudrez)

0.004 2013-02-02

 - never released on CPAN

 [API change: preferred interface]
 - the object-oriented interface is now the preferred interface (Edward Baudrez)